<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_user_name"
            android:inputType="textPersonName">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/please_enter_email_id"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/please_enter_user_type">

        </com.google.android.material.textfield.TextInputEditText>


        <Button
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up">

        </Button>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/have_an_account" />

    </LinearLayout>

</layout>